<resources>
    <string name="app_name">Banco de Tiempo</string>
    <string name="registroBDT" translatable="false">Registrarse con BDT</string>
    <string name="registroFB" translatable="false">Registrarse con Facebook</string>
    <string name="registroG" translatable="false">Registrarse con Google</string>
    <string name="iniciarsesion" translatable="false">Iniciar Sesión</string>
    <string name="bienvenida" translatable="false">Banco de Tiempo</string>
    <string name="logoBDT" translatable="false">Reloj de bienvenida</string>
    <string name="nombreLogin" translatable="false">Nombre</string>
    <string name="passwordLogin" translatable="false">Contraseña</string>
    <string name="registroReg" translatable="false">Registro</string>
    <string name="registroTeryPol" translatable="false">Acepto las condiciones de uso y la política de privacidad.</string>
    <string name="usuario" translatable="false">Usuario</string>
    <string name="correo" translatable="false">Correo</string>
    <string name="confirmaContra" translatable="false">Confirma contraseña</string>
    <string name="registrarse" translatable="false">Regístrate</string>
    <string name="nombreUsuario" translatable="false">Nombre de Usuario</string>
    <string name="datosUsuario" translatable="false">Datos del Usuario</string>
    <string name="documentosUsuario" translatable="false">Documentos / Certificados</string>
    <string name="apellidoMaterno" translatable="false">Apellido Materno</string>
    <string name="apellidoPaterno" translatable="false">Apellido Paterno</string>
    <string name="direccion" translatable="false">Dirección</string>
    <string name="municipio" translatable="false">Municipio</string>
    <string name="codigoPostal" translatable="false">Código Postal</string>
    <string name="ciudad" translatable="false">Ciudad</string>
    <string name="nombres" translatable="false">Nombre(s)</string>
    <string name="nacimiento" translatable="false">Nacimiento</string>
    <string name="ine" translatable="false">INE *</string>
    <string name="comprobanteDomicilio" translatable="false">Comprobante de Domicilio *</string>
    <string name="certificado" translatable="false">Certificado</string>
    <string name="cartaPenal" translatable="false">Carta de Antecendentes no Penales *</string>
    <string name="eligeDoc" translatable="false">Elige Documento...</string>
    <string name="busquedaFiltro" translatable="false">Ingresa una Categoría</string>
    <string name="topCategorias" translatable="false">Top Categorías</string>

    //Nueva Oferta
    <string name="upload" translatable="false">Subir</string>
    <string name="nomOfer" translatable="false">Nombre de la oferta</string>
    <string name="trabajo" translatable="false">Tipo de trabajo</string>
    <string name="ubicacion" translatable="false">Ubicacion</string>
    <string name="descripcion" translatable="false">Breve descripcion de la oferta.</string>
    <string name="imgoferta" translatable="false">Imagen de la oferta</string>
    <string-array name="tipoOferta">
        <item>Carpintería</item>
        <item>Repostería</item>
        <item>Panadería</item>
    </string-array>
    <string-array name="ubicacionOferta">
        <item>Coyotepec</item>
        <item>Acolman</item>
        <item>Tenancingo</item>
    </string-array>

    //Ajustes
    <string name="software" translatable="false">Información de Software</string>
    <string name="terycon" translatable="false">Términos y condiciones</string>
    <string name="legal" translatable="false">Legal</string>
    <string name="faq" translatable="false">Preguntas frecuentes</string>
    <string name="manual" translatable="false">Manual de aplicación</string>
    <string name="title_activity_test">test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    //Bienvenida
    <string name="start" translatable="false">Comenzar</string>

    <string name="validacion" translatable="false">Verificación</string>
    <string name="msgValidacion" translatable="false">Ingresa el código que se envió por correo</string>
    <string name="codigoVeri" translatable="false">Ingresa el código </string>
    <string name="entrar" translatable="false">Entrar</string>
    <string name="nuevoCodigo" translatable="false"><a href="https://www.youtube.com/watch?v=R0H0X0KXzbA">Enviar código nuevamente</a></string>
    <string name="horasRealizar" translatable="false">Puedes realizar horas</string>
    <string name="horasRecibir" translatable="false">Puedes recibir horas</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="title_activity_pagina_menu_principal" translatable="false">PaginaMenuPrincipal</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Perfil de usuario</string>
    <string name="menu_gallery" translatable="false">Consulta de ofertas</string>
    <string name="menu_slideshow" translatable="false">Registro de ofertas</string>
    <string name="menu_ajustes" translatable="false">Ajustes</string>

    <string name="misOfertas" translatable="false">Mis Ofertas publicadas</string>
    <string name="favoritos" translatable="false">Mis Servicios Favoritos</string>
    <string name="servicioId" translatable="false">Nombre del servicio</string>
    <string name="contacto" translatable="false">Ofertante</string>
    <string name="contratar" translatable="false">Contratar nuevamente</string>
    <string name="title_activity_menu_navegacion" translatable="false">MenuNavegacion</string>
    <string name="title_activity_pagina_navegacion" translatable="false">PaginaNavegacion</string>

    <string name="nombreUsuario" translatable="false">Nombre de usuario</string>

    <string name="horasHacer" translatable="false">Estatus para realizar horas</string>
    <string name="horasR" translatable="false">Estatus para recibir horas</string>



</resources>
